...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="77X-KH-fsJ" id="Yrh-Ln-lW4"/>
                            <outlet property="delegate" destination="77X-KH-fsJ" id="zIV-Za-o1H"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Browse" id="YYP-LS-hki">
                        <rightBarButtonItems>
                            <barButtonItem image="cart" id="BnV-GH-YKR" userLabel="Cart">
                                <color key="tintColor" name="Tasman500"/>
                                <connections>
                                    <action selector="cartTap" destination="77X-KH-fsJ" id="UoV-Cu-6QG"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Item" image="search" id="tY8-Sd-xCw" userLabel="Search">
                                <color key="tintColor" name="Tasman500"/>
                                <connections>
                                    <action selector="searchTap" destination="77X-KH-fsJ" id="Uhw-tM-2Kj"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
...
            <point key="canvasLocation" x="-379" y="-1435"/>
        </scene>
        <!--Notifications Navigation Controller-->
        <scene sceneID="7cc-Tf-Hhr">
            <objects>
                <navigationController id="M7b-tc-1MV" userLabel="Notifications Navigation Controller" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Notifications" image="bell" catalog="system" id="AW9-P7-iSO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OCe-fW-Rka">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="Ors-xx-jAt" kind="relationship" relationship="rootViewController" id="pLF-ST-EFw"/>
...
            <objects>
                <viewController id="Ors-xx-jAt" customClass="NotificationsViewController" customModule="TradeMe" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="xO0-iB-oAZ">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Coming soon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSd-PR-5CX" userLabel="Coming soon">
                                <rect key="frame" x="119" y="410" width="155" height="33"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <color key="textColor" name="TextDark"/>
                                <nil key="highlightedColor"/>
                            </label>
...
            <point key="canvasLocation" x="-379" y="-799"/>
        </scene>
        <!--Watchlist Navigation Controller-->
        <scene sceneID="CQW-cF-mze">
            <objects>
                <navigationController id="meV-ew-DNA" userLabel="Watchlist Navigation Controller" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Watchlist" image="watchlist" id="HGJ-LM-Nlr"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rh1-Vt-xI6">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="JYi-p4-xQl" kind="relationship" relationship="rootViewController" id="DKn-Bc-wPS"/>
...
            <point key="canvasLocation" x="-379" y="-164"/>
        </scene>
        <!--My Trade Me Navigation Controller-->
        <scene sceneID="dQD-Lj-7zC">
            <objects>
                <navigationController id="itD-S1-lS2" userLabel="My Trade Me Navigation Controller" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Trade Me" image="person" catalog="system" id="ijg-EG-mME"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qXl-qu-815">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="LB5-aD-ZOd" kind="relationship" relationship="rootViewController" id="GnT-8p-Yxg"/>
...
